--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script src="https://kit.fontawesome.com/e37732dd11.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
